Fixed in slider overflow issue in div when browser font size is set to very large

--- a/style.css
+++ b/style.css
@@ -142,8 +142,8 @@ button, input[type=submit], p {
     background-color: rgba(0,0,0,0);
     color: var(--white);
     border: 2px solid var(--white);
-    width: 120px;
-    height: 40px;
+    width: 9em;
+    height: 3em;
     cursor: pointer;
     text-transform: uppercase;
     margin: 20px 0;
@@ -323,8 +323,9 @@ button, input[type=submit], p {
 #about-us-button {
     background-color: var(--black);
     color: var(--white);
-    width: 100px;
-    height: 40px;
+    padding: 10px 25px;
+    /*width: 100px;*/
+    /*height: 40px;*/
     cursor: pointer;
     margin-top: 30px;
 }
@@ -352,6 +353,7 @@ button, input[type=submit], p {
 
 .customer-reviews-content {
     text-align: center;
+    max-width: 100%;
 }
 
 .customer-reviews-content > p {
@@ -362,6 +364,7 @@ button, input[type=submit], p {
 .social-reviews-container {
     display: flex;
     justify-content: space-around;
+    margin-top: 50px;
 }
 
 .social-review {
@@ -374,8 +377,8 @@ button, input[type=submit], p {
 .users-reviews-button {
     margin: 20px;
     background-color: rgba(0,0,0,0);
-    width: 230px;
-    height: 40px;
+    width: 17em;
+    height: 3em;
     cursor: pointer;
     border: 1px solid black;
     transition: 0.2s;
@@ -420,8 +423,9 @@ button, input[type=submit], p {
     color: var(--white);
     font-weight: bold;
     cursor: pointer;
-    width: 120px;
-    height: 30px;
+    padding: .5em 1.5em;
+    /*width: 120px;*/
+    /*height: 30px;*/
     margin-top: 20px;
     font-size: 1rem;
 }
@@ -458,16 +462,19 @@ button, input[type=submit], p {
 .slider-item {
     background-color: white;
     width: 230px;
-    height: 550px;
+    height: 35em;
     text-align: center;
     padding: 30px 20px;
     border-left: 15px solid var(--grey);
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 
 }
 
 .slide-img {
-    width: 100%;
-    height: 40%;
+    width: 240px;
+    height: 180px;
     overflow: hidden;
 }
 
@@ -541,8 +548,9 @@ button, input[type=submit], p {
     text-transform: uppercase;
     border: 4px solid var(--white);
     color: var(--white);
-    height: 40px;
-    width: 300px;
+    padding: .7em 6em;
+    /*height: 40px;*/
+    /*width: 300px;*/
     cursor: pointer;
     margin: 20px;
     font-weight: bold;
